2011-11-11  Brady Eidson  <beidson@apple.com>

        Rubberstamped by Andy Estes

        100,000!
        Congratulations WebKit, and here's to hundreds of thousands more!
        
        * ChangeLog: Point out revision 100,000.

2011-11-11  David Kilzer  <ddkilzer@apple.com>

        <http://webkit.org/b/71921> Remove use of strcpy in KURL

        Reviewed by Antti Koivisto.

        * platform/KURL.cpp:
        (WebCore::KURL::init): Replace strcpy() with strncpy().

2011-11-11  Mark Hahnenberg  <mhahnenberg@apple.com>

        De-virtualize supportsProfiling, supportsRichSourceInfo, shouldInterruptScript in JSGlobalObject
        https://bugs.webkit.org/show_bug.cgi?id=72035

        Reviewed by Geoffrey Garen.

        No new tests.

        * bindings/js/JSDOMGlobalObject.cpp: Changed constructor to support passing new GlobalObjectMethodTable pointer to parent class.
        (WebCore::JSDOMGlobalObject::JSDOMGlobalObject):
        * bindings/js/JSDOMGlobalObject.h:
        * bindings/js/JSDOMWindowBase.cpp: Added static const GlobalObjectMethodTable and filled it in with the proper function pointers.
        (WebCore::JSDOMWindowBase::JSDOMWindowBase):
        (WebCore::JSDOMWindowBase::supportsProfiling): Changed to static to put in the method table.
        (WebCore::JSDOMWindowBase::supportsRichSourceInfo): Ditto.
        (WebCore::JSDOMWindowBase::shouldInterruptScript): Ditto.
        * bindings/js/JSDOMWindowBase.h:


2011-11-11  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r99869.
        http://trac.webkit.org/changeset/99869
        https://bugs.webkit.org/show_bug.cgi?id=72157

        "Caused a ~400% perf regression on the Chromium intl1 page
        cyclers" (Requested by ojan on #webkit).

        * dom/Document.cpp:
        (WebCore::Document::Document):
        (WebCore::Document::images):
        (WebCore::Document::applets):
        (WebCore::Document::embeds):
        (WebCore::Document::plugins):