@@ -157,9 +157,6 @@ namespace WebCore {
         
         void setIsolatedWorldSecurityOrigin(int worldID, PassRefPtr<SecurityOrigin>);
 
-        // Returns true if the proxy is currently executing a script in V8.
-        bool executingScript() const;
-
         // Evaluate a script file in the current execution environment.
         // The caller must hold an execution context.
         // If cannot evalute the script, it returns an error.
